--- a/function_webs/html_function_webs/Scans/scanfastdac.html
+++ b/function_webs/html_function_webs/Scans/scanfastdac.html
@@ -326,10 +326,6 @@ scfd_distributedata2 --> scu_getdevicechannels;
 scfd_recordbuffer --> scfd_checksweepstate;
 scfd_checksweepstate --> scs_checksweepstate;
 scfd_checksweepstate --> fd_stopfdacsweep;
-scfd_recordbuffer --> scfd_expectedbytesinbuffer;
-scfd_recordbuffer --> scfd_raw2calcquickdistribute;
-scfd_raw2calcquickdistribute --> sci_get1dwavenames;
-scfd_raw2calcquickdistribute --> scf_getrecordedfadcinfo;
 scfd_recordbuffer --> scg_updatefrequentgraphs;
 scfd_sendcommandandread --> fd_stopfdacsweep;
 scfd_sendcommandandread --> readinstr;
@@ -361,6 +357,7 @@ scfd_processanddistribute --> scfd_demodulate;
 scfd_processanddistribute --> scfd_resamplewaves;
 scfd_processanddistribute --> scfd_spectrum_analyzer;
 scanfastdac --> endscan;
+scanfastdac --> set_indep;
 subgraph fastdac.ipf
 openfastdacconnection
 set_master_slave
@@ -480,9 +477,7 @@ scfd_recordvalues
 scfd_sendcommandandread
 scfd_processanddistribute
 scfd_recordbuffer
-scfd_expectedbytesinbuffer
 scfd_getreadchunksize
-scfd_raw2calcquickdistribute
 scfd_checksweepstate
 scfd_readchunk
 scfd_distributedata1
