--- a/function_webs/html_function_webs/Scans/scanfastdack24002d.html
+++ b/function_webs/html_function_webs/Scans/scanfastdack24002d.html
@@ -327,10 +327,6 @@ scfd_distributedata2 --> scu_getdevicechannels;
 scfd_recordbuffer --> scfd_checksweepstate;
 scfd_checksweepstate --> scs_checksweepstate;
 scfd_checksweepstate --> fd_stopfdacsweep;
-scfd_recordbuffer --> scfd_expectedbytesinbuffer;
-scfd_recordbuffer --> scfd_raw2calcquickdistribute;
-scfd_raw2calcquickdistribute --> sci_get1dwavenames;
-scfd_raw2calcquickdistribute --> scf_getrecordedfadcinfo;
 scfd_recordbuffer --> scg_updatefrequentgraphs;
 scfd_sendcommandandread --> fd_stopfdacsweep;
 scfd_sendcommandandread --> readinstr;
@@ -362,6 +358,7 @@ scfd_processanddistribute --> scfd_demodulate;
 scfd_processanddistribute --> scfd_resamplewaves;
 scfd_processanddistribute --> scfd_spectrum_analyzer;
 scanfastdac --> endscan;
+scanfastdac --> set_indep;
 scanfastdack24002d --> sc_openinstrconnections;
 scanfastdack24002d --> initscanvars;
 scanfastdack24002d --> initscanvarsfd;
@@ -505,9 +502,7 @@ scfd_recordvalues
 scfd_sendcommandandread
 scfd_processanddistribute
 scfd_recordbuffer
-scfd_expectedbytesinbuffer
 scfd_getreadchunksize
-scfd_raw2calcquickdistribute
 scfd_checksweepstate
 scfd_readchunk
 scfd_distributedata1
