--- a/function_webs/html_function_webs/Scans/scanfastdacslow2d.html
+++ b/function_webs/html_function_webs/Scans/scanfastdacslow2d.html
@@ -327,10 +327,6 @@ scfd_distributedata2 --> scu_getdevicechannels;
 scfd_recordbuffer --> scfd_checksweepstate;
 scfd_checksweepstate --> scs_checksweepstate;
 scfd_checksweepstate --> fd_stopfdacsweep;
-scfd_recordbuffer --> scfd_expectedbytesinbuffer;
-scfd_recordbuffer --> scfd_raw2calcquickdistribute;
-scfd_raw2calcquickdistribute --> sci_get1dwavenames;
-scfd_raw2calcquickdistribute --> scf_getrecordedfadcinfo;
 scfd_recordbuffer --> scg_updatefrequentgraphs;
 scfd_sendcommandandread --> fd_stopfdacsweep;
 scfd_sendcommandandread --> readinstr;
@@ -362,6 +358,7 @@ scfd_processanddistribute --> scfd_demodulate;
 scfd_processanddistribute --> scfd_resamplewaves;
 scfd_processanddistribute --> scfd_spectrum_analyzer;
 scanfastdac --> endscan;
+scanfastdac --> set_indep;
 scanfastdacslow2d --> scanfastdacslow;
 scanfastdacslow --> scanfastdac;
 scanfastdacslow --> sc_openinstrconnections;
@@ -396,6 +393,9 @@ bd_rampoutputbd --> bd_setoutputbd;
 bd_rampoutputbd --> sc_sleep;
 rampmultiplebd --> bd_calccustomvalues;
 scanfastdacslow --> recordvalues;
+scanfastdacslow --> stoppid;
+stoppid --> writeinstr;
+scanfastdacslow --> clearfdacbuffer;
 scanfastdacslow --> endscan;
 scanfastdacslow2d --> sc_openinstrconnections;
 scanfastdacslow2d --> initscanvars;
@@ -432,6 +432,7 @@ getfadcchannel
 getfdacoutput
 rampmultiplefdac
 fd_rampoutputfdac
+stoppid
 fd_get_numpts_from_sweeprate
 fd_get_sweeprate_from_numpts
 clearfdacbuffer
@@ -544,9 +545,7 @@ scfd_recordvalues
 scfd_sendcommandandread
 scfd_processanddistribute
 scfd_recordbuffer
-scfd_expectedbytesinbuffer
 scfd_getreadchunksize
-scfd_raw2calcquickdistribute
 scfd_checksweepstate
 scfd_readchunk
 scfd_distributedata1
